# update-approve-page

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: build.yml
app/: main.py
app/static/: index.html
tests/: stub_n8n.py  test_app.py
