[project]
name = "update-approve-page"
version = "0.1.0"
description = "Human-approval webpage for pending homelab app updates (n8n update pipeline)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
